# gia-evidence-finder

./: .gitignore  README.md  claim_plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: benchmark-series.md  curation-queue-results.md  domain-competitor-benchmarking.md  model-baseline-results.md  polarity-negation-implementation-2026-05-08-event-log.md  polarity-negation-implementation-2026-05-08.md  product-readiness-2026-05-09.md  quality-plan.md  quantifier-binding-implementation-2026-05-09.md  quantifier-date-implementation-2026-05-09.md  release-checklist.md  sota-implementation-2026-05-08-event-log.md  sota-implementation-2026-05-08.md  sota-progress-2026-05-08-event-log.md  sota-progress-2026-05-08.md
scripts/: modal_train_reranker.py
src/gia_evidence_finder/: __init__.py  baseline_registry.py  benchmark_audit.py  benchmark_series.py  calibration.py  cli.py  competitor_evaluation.py  contracts.py  curation_audit.py  curation_queue.py  document_benchmarks.py  domain_benchmarks.py  evaluation.py  experiments.py  extractor.py  failure_analysis.py  intent_compiler.py  model_baselines.py  model_judgment.py  parsing.py  polarity.py  polarity_benchmarks.py  quantifier_benchmarks.py  quantifiers.py  ranking.py  readme_benchmarks.py  reranker_cache.py  reviewed_cases.py  source_catalog.py  text.py  training.py  training_runs.py
tests/: conftest.py  test_baseline_registry.py  test_benchmark_audit.py  test_benchmark_series.py  test_cli.py  test_competitor_evaluation.py  test_curation_audit.py  test_curation_queue.py  test_document_benchmarks.py  test_domain_benchmarks.py  test_evaluation_training.py  test_extraction.py  test_failure_analysis.py  test_intent_compiler.py  test_model_baselines.py  test_model_judgment.py  test_parsing.py  test_polarity_benchmarks.py  test_quality_benchmark.py  test_quantifier_benchmarks.py  test_readme_benchmarks.py  test_reranker_cache.py  test_reviewed_cases.py  test_source_catalog.py  test_training_runs.py
